[tool.poetry]
name = "outilbot"
version = "0.1.0"
description = ""
authors = ["pmontens <pieterjan@montens.net>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
httpx = "^0.21.3"
httpx-auth = "^0.13.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
poethepoet = "^0.12.1"

[tool.poe.tasks]
test = "./run.py test"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
